--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
       with:
-        credentials_json: '${{ secrets.gcp_credentials }}'
+        credentials_json: '${{ secrets.GCLOUD_DEPLOY }}'
 
     - id: 'deploy'
       uses: 'google-github-actions/deploy-cloud-functions@v0'
